--- a/auto-bp/package.json
+++ b/auto-bp/package.json
@@ -7,6 +7,8 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.7",
     "vue": "^2.5.13"
   },
   "devDependencies": {
